--- a/src/main/resources/allure.properties
+++ b/src/main/resources/allure.properties
@@ -1,2 +1,3 @@
 allure.results.directory=test-outputs/allure-results
+allure.report.directory=test-outputs/allure-report
 openAllureAutomatically=true
